kubernetes/overlays/homelab/dev/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: craftista-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - frontend.home-lab.webdemoapp.com
      secretName: frontend-tls
  rules:
    - host: frontend.home-lab.webdemoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
